# pdf-editor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
gui/: main.py
src/: pdf_merge.py  pdf_split.py  pdf_to_img.py
